<resources>
    <string name="app_name">E-Commerce</string>
    <string name="loading">Loading details...</string>
    <string name="addtocart">Add to Cart</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_register_now">Click to Register now</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New password</string>
    <string name="forgot_pass_change_pass_now">Forgot Pass? Change pass now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view">image view</string>
</resources>